[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main World/Main.gd" type="Script" id=2]
[ext_resource path="res://Main World/grassMid.png" type="Texture" id=3]
[ext_resource path="res://Main World/jumpPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main World/backgroundColorGrass.png" type="Texture" id=5]
[ext_resource path="res://Main World/backgroundEmpty.png" type="Texture" id=6]
[ext_resource path="res://Coin/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 290.5, 112.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 314.75 )

[node name="MainWorld" type="Node2D"]
position = Vector2( -123, -165 )
script = ExtResource( 2 )

[node name="BackGround" type="Node2D" parent="."]

[node name="BackgroundEmpty" type="Sprite" parent="BackGround"]
position = Vector2( 365, -683 )
scale = Vector2( 1, 1.41992 )
texture = ExtResource( 6 )

[node name="BackgroundColorGrass" type="Sprite" parent="BackGround"]
position = Vector2( 366, 266 )
scale = Vector2( 0.830078, 1.07422 )
texture = ExtResource( 5 )

[node name="floor" type="Node2D" parent="."]
position = Vector2( -124, -38 )

[node name="GrassMid" type="Sprite" parent="floor"]
position = Vector2( 481, 832 )
scale = Vector2( 6.88571, 1 )
texture = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="floor"]
position = Vector2( 480, 824 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor/KinematicBody2D"]
position = Vector2( 6, 85 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 356, 750 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 198, 552 )

[node name="Node2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 495, 558 )

[node name="Node2D3" parent="." instance=ExtResource( 4 )]
position = Vector2( 348, 432 )

[node name="Node2D7" parent="." instance=ExtResource( 4 )]
position = Vector2( 346, 322 )

[node name="Node2D5" parent="." instance=ExtResource( 4 )]
position = Vector2( 201, 426 )

[node name="Node2D6" parent="." instance=ExtResource( 4 )]
position = Vector2( 499, 421 )

[node name="Node2D4" parent="." instance=ExtResource( 4 )]
position = Vector2( 346, 554 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 352, 621 )
current = true

[node name="deathColliders" type="Node2D" parent="."]
position = Vector2( 357, 744 )

[node name="DeathCollider" type="Area2D" parent="deathColliders"]
position = Vector2( -233, -291 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathColliders/DeathCollider"]
position = Vector2( -37, 5 )
shape = SubResource( 2 )

[node name="DeathCollider2" type="Area2D" parent="deathColliders"]
position = Vector2( -93, 73 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathColliders/DeathCollider2"]
position = Vector2( 94, -35 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="DeathCollider3" type="Area2D" parent="deathColliders"]
position = Vector2( 152, -257 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathColliders/DeathCollider3"]
position = Vector2( 107, -22 )
shape = SubResource( 2 )

[node name="Node2D8" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 541 )

[node name="HUD" parent="." instance=ExtResource( 8 )]
position = Vector2( 56, 320 )

[connection signal="body_entered" from="deathColliders/DeathCollider" to="." method="_on_DeathCollider_body_entered"]
[connection signal="body_entered" from="deathColliders/DeathCollider2" to="." method="_on_DeathCollider2_body_entered"]
[connection signal="body_entered" from="deathColliders/DeathCollider3" to="." method="_on_DeathCollider2_body_entered"]
